# tg_focus_app

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  requirements.txt  run.sh
backend/: docker-compose.yml  run.sh
frontend/: .env.local  README.md  index.html  install_dev_shortcut.command  install_or_open_tg_assistant.command  package-lock.json  package.json  run_dev_tg_assistant.command  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/telegram/: AuthForm.tsx  BotTokenForm.tsx  ChatList.tsx  MessageInput.tsx  MessageList.tsx  TelegramApp.tsx  TelegramIntegrationInfo.tsx
frontend/src/contexts/: TelegramContext.tsx
frontend/src/pages/: AuthPage.tsx  ChatPage.tsx  HomePage.tsx  MessagePage.tsx  QueuePage.tsx
frontend/src/services/: telegramApi.ts  telegramBotApi.ts
frontend/src/types/: telegram.ts
